syntax = "proto2";

service CAAChecker {
        rpc ValidForIssuance(Check) returns (Result) {}
}

message Check {
        optional string name = 1;
        optional string issuerDomain = 2;
}

message Result {
        optional bool present = 1;
        optional bool valid = 2;
}
